--- a/package.json
+++ b/package.json
@@ -41,7 +41,9 @@
     "loader.js": "^4.0.1"
   },
   "keywords": [
-    "ember-addon"
+    "ember-addon",
+    "ember-crosstab",
+    "crosstab"
   ],
   "dependencies": {
     "ember-cli-babel": "^5.1.6",
